TheMightyDude (17 Aug 2007)
--------------------------------------
Fixed Collect Credits from Planets.
This was down to using old $HTTP_POST_VARS insted of the new $_POST

TheMightyDude (09 Jan 2007)
--------------------------------------
Fixed bug in combat.php where planetfighters was set to 0 before the calculation.
Seems like there was two lines causing this problem :(

TheMightyDude (29 Dec 2006)
--------------------------------------
Fixed bug in combat.php where the planets energy wouldn't go down with the use of their beams.
Fixed bug in combat.php where planetfighters was set to 0 before the calculation.

TheMightyDude (27 Dec 2006)
--------------------------------------
Fixed the score bug, was genscore(...) function was using armour when it should of been armor.
Fixed score bug which was down to genscore using an if statment resulting in some score going to 0.

TheMightyDude (14 Dec 2006)
--------------------------------------
[1564468] Added part of Patch.
Fixed error "error in the SQL statement (not null column corp set to null)"

TheMightyDude (27 Oct 2006)
--------------------------------------
[1585781] Players log showing wrong date when viewing. (Fixed)

TheMightyDude (22 May 2006)
--------------------------------------
[1493132] Extra Sector using preset.php (fixed)

TheMightyDude (20 May 2006)
--------------------------------------
[1491795] ip detection bug (fixed)

TheMightyDude (21 April 2006)
--------------------------------------
[1470569] Num of moves moved in traderoute not showing FIXED.

TheMightyDude (20 April 2006)
--------------------------------------
Added all the missing Folders and the contents in them.
Patched all in [1470442] Various Bugs (fixes included) apart from the language files.

TheMightyDude (05 February 2006)
--------------------------------------
Patched function connectdb() so that it doesn't blank screen on Setup Info :)
Usage connectdb(false) if error connecting display nothing.