@@ -32,7 +32,7 @@ $shipname=htmlspecialchars($shipname);
 $character=ereg_replace("[^[:digit:][:space:][:alpha:][\']]"," ",$character);
 $shipname=ereg_replace("[^[:digit:][:space:][:alpha:][\']]"," ",$shipname);
 
-//$username = $HTTP_POST_VARS['username']; //This needs to STAY before the db query
+//$username = $_POST['username']; //This needs to STAY before the db query
 
 if(!get_magic_quotes_gpc())
 {
